ss5代理配置/iptables
# Generated by iptables-save v1.4.7 on Thu Oct 29 17:12:32 2015
*nat
:PREROUTING ACCEPT [14:1689]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
#-A PREROUTING -p tcp -m tcp --dport 6000 -j DNAT --to-destination 10.18.18.91:5222 
-A POSTROUTING -s 10.18.18.0/24 -o eth0 -j MASQUERADE 
COMMIT
# Completed on Thu Oct 29 17:12:32 2015
# Generated by iptables-save v1.4.7 on Thu Oct 29 17:12:32 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [23:1944]
:OUTPUT ACCEPT [86:13312]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 29126 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 27118 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 27118 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Thu Oct 29 17:12:32 2015
